[gd_scene load_steps=7 format=3 uid="uid://layulcd8e5uf"]

[ext_resource type="Script" path="res://scenes/ecs/parent/crate.gd" id="1_uutri"]
[ext_resource type="PackedScene" uid="uid://mcwanb7c0jec" path="res://scenes/ecs/components/health_component.tscn" id="2_lf8s4"]
[ext_resource type="PackedScene" uid="uid://dxrg2y44scbte" path="res://scenes/ecs/components/pickup_drop_component.tscn" id="3_dt1xq"]
[ext_resource type="PackedScene" uid="uid://gihk3t1yjgof" path="res://resources/particle_systems/hit_particles.tscn" id="4_fmdyp"]
[ext_resource type="PackedScene" uid="uid://cs0ff02ffre6w" path="res://visuals/models/pickups/Pico_D8Crate.glb" id="5_t7tpu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ctoxs"]
size = Vector3(1, 1.39136, 1)

[node name="Crate" type="StaticBody3D"]
collision_layer = 2048
collision_mask = 0
script = ExtResource("1_uutri")

[node name="Components" type="Node" parent="."]

[node name="HealthComponent" parent="Components" instance=ExtResource("2_lf8s4")]
max_health = 8

[node name="PickupDropComponent" parent="Components" instance=ExtResource("3_dt1xq")]
_guaranteed_pickup_drops = Array[PackedScene]([])

[node name="PrimaryCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1.25024, 0)
shape = SubResource("BoxShape3D_ctoxs")

[node name="HitParticles" parent="." instance=ExtResource("4_fmdyp")]

[node name="Pico_D8Crate" parent="." instance=ExtResource("5_t7tpu")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1.25185, 0)
